# autonomy_datasets

./: .copier-answers.yml  .devcontainer  .env  .gitmodules  .pre-commit-config.yaml  .repos  .vscode  LICENSE  README.md  TODO.md  dir_49e56c817e5e54854c35e136979f97ca.html  doxygen_crawl.html  index.html  md_docs_2IMPLEMENTATION.html  navtreedata.js  navtreeindex0.js  pages.html
.devcontainer/: .gitignore  Dockerfile  devcontainer.json
.github/workflows/: consistency.yml  docker-ros.yml  docs.yml  documentation.yml  industrial_ci.yml
autonomy_datasets/: README.md  package.xml  setup.cfg  setup.py
autonomy_datasets/autonomy_datasets/: __init__.py  autonomy_datasets.py
autonomy_datasets/autonomy_datasets/datasets/: dataset.py  utils.py
autonomy_datasets/autonomy_datasets/datasets/nuscenes/: __init__.py  nuscenes.py
autonomy_datasets/autonomy_datasets/datasets/nvidia_physicalai_av_dataset/: nvidia_physicalai_av_dataset.py
autonomy_datasets/autonomy_datasets/datasets/rosbag/: rosbag.py
autonomy_datasets/autonomy_datasets/datasets/waymo_open_dataset/: waymo_open_dataset.py
autonomy_datasets/autonomy_datasets/utils/: rosbag.py  visualization_utils.py
autonomy_datasets/config/: config.rviz  mcap_storage_config.yaml  params.yml  params_nuscenes.yml  params_nvidia_physicalai_av_dataset.yml  params_waymo_open_dataset.yml
autonomy_datasets/launch/: autonomy_datasets.launch.py  autonomy_datasets_launch.py
docker/: additional-pip-requirements.txt  before_dependency_installation.sh  custom.sh
docker/compose/: docker-compose.yml
docs/: IMPLEMENTATION.md
ros2_demo_package/: CMakeLists.txt  README.md  package.xml
ros2_demo_package/include/ros2_demo_package/: ros2_demo_node.hpp
ros2_demo_package/launch/: ros2_demo_node_launch.py
ros2_demo_package/src/: ros2_demo_node.cpp
ros2_demo_package_interfaces/: README.md  package.xml
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  files_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
